Add required fields to routes-openapi.yaml and re-generate models
